--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,9 @@ jobs:
         python -m
         build
         --sdist
-        --bdist_wheel
-        twine check dist/*
+        --wheel
+        --outdir dist/
+        .
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
