--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = django-review
+name = django-product-review
 version = 0.0.1
 description = Django review app
 long_description = file: README.md
@@ -20,7 +20,6 @@ classifiers =
     Programming Language :: Python :: 3.10
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent 
-    Topic :: Internet :: WWW/HTTP :: Dynamic
 
 [options]
 package_dir =
